Event card in lower row at start resolved. Track init fixed. Multiple cards picked fixed.